--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
